--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.7.2
 Django==3.2.25
 Pillow==9.5.0
-pytz==2024.
+pytz==2024.1
 sqlparse==0.4.4
 typing_extensions==4.7.1
 whitenoise==6.5.0
+
+
+
